kubernetes/deployment.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: moderator-deployment
  namespace: parsys
  labels:
    app: moderator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderator
  template:
    metadata:
      labels:
        app: moderator
    spec:
      containers:
        - name: moderator-web
          image: 320464205386.dkr.ecr.us-east-2.amazonaws.com/moderator:latest
          ports:
            - containerPort: 8000
