kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: moderator-service
  namespace: parsys
spec:
  type: NodePort
  selector:
    app: moderator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
