kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moderator-ingress
  namespace: parsys
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-3fbf1565,subnet-1f4eac54,subnet-721edd0b
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:320464205386:certificate/5e694803-987f-4507-b7a2-898b4820114e
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/tags: Environment=testing,Group=parsys
spec:
  rules:
  - host: moderator-testing.iam.mozilla.com
    http:
      paths:
      - path: /
        backend:
          serviceName: moderator-service
          servicePort: 80
